EBNF
PROGRAM = "</ViniLang", { COMMAND }, "/>" ;

BLOCK = "{", { COMMAND }, "}" ;

COMMAND = ( λ | ASSIGNMENT | PRINT | FUNCCALL), ";" | BLOCK | LOOP | IF | FUNCDEF | RETURN;

ASSIGNMENT = IDENTIFIER, "=", EXPRESSION, ";" ;

PRINT = "ohce", RELEXPR, ";" ;

EXPRESSION = TERM, { ("+" | "-"|"or"), TERM } ;

TERM = FACTOR, { ("*" | "/"|"and"), FACTOR } ;

FACTOR = (("+" | "-" | "!"), FACTOR) | NUMBER | BOOL | "(", RELEXPR, ")" | IDENTIFIER | FUNCCALL | "tupni()";

IDENTIFIER = "var", LETTER, { LETTER | DIGIT | "_" } ;

RETURN = "nruter" | RELEPR ; 

BOOL = (true, false) ;

NUMBER = DIGIT, { DIGIT } ;

LETTER = ( a | ... | z | A | ... | Z ) ;

DIGIT = ( 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 0 ) ;

RELEPR = EXPRESSION, {("=="|">"|"<") , EXPRESSION};

LOOP = "elihw", "(", RELEPR, ")", COMMAND;

IF = "fi", "(", RELEPR, ")", COMMAND, (λ | "esle", "(", RELEXPR, ")", COMMAND);

FUNCDEF = "fed" , (LETTER , {LETTER | DIGIT | "_"}) , "(" ({IDENTIFIER , ","}, IDENTIFIER) | IDENTIFIER | λ ")", BLOCK;

FUNCCALL = (LETTER , {LETTER | DIGIT | "_"}) , "(" ({RELEPR , ","}, RELEPR) | RELEPR | λ ")";
